crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_type_with_multiple_interfaces.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "type User implements Node & Timestamped { id: ID! }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: None,
                        name: Name(
                            "User",
                        ),
                        implements: [
                            Name(
                                "Node",
                            ),
                            Name(
                                "Timestamped",
                            ),
                        ],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: Name(
                                    "id",
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: "ID",
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
