crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_union_definition.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "union SearchResult = User | Post | Comment",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Type(
                Union(
                    UnionTypeDefinition {
                        description: None,
                        name: Name(
                            "SearchResult",
                        ),
                        directives: [],
                        members: [
                            Name(
                                "User",
                            ),
                            Name(
                                "Post",
                            ),
                            Name(
                                "Comment",
                            ),
                        ],
                    },
                ),
            ),
        ),
    ],
}
